# deckr_fonts

./: .gitignore  LICENSE  README.md  pyproject.toml  upstream.toml
examples/: font_info.py
src/deckr_fonts/: __init__.py  font_assets.py  font_assets.pyi  pack.py
src/deckr_fonts/fonts/: pack_manifest.json
tests/: __init__.py  test_font_discovery.py
